# client

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: pypi.yml
docs/: conf.py
jobqueue_monitor/: __init__.py  app.py  jobqueue_monitor.tcss  main.py  query.py  utils.py
jobqueue_monitor/screens/: __init__.py  job.py  job.tcss  job_details.tcss  job_modal.tcss  queue.py  queue.tcss  queue_details.tcss
