[project]
name = "jobqueue-monitor"
requires-python = ">= 3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "rich",
  "rich-click",
  "textual",
  "asyncssh",
  "httpx",
]
dynamic = ["version"]

[project.scripts]
jobqueue-monitor = "jobqueue_monitor.main:main"

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jobqueue_monitor"]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.ruff]
builtins = ["ellipsis"]
exclude = [
  ".git",
  ".eggs",
  "build",
  "dist",
  "__pycache__",
  "docs",
]
target-version = "py312"

extend-include = ["*.ipynb"]
line-length = 100

fix = true

[tool.ruff.lint]
select = [
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "I",   # isort
  "UP",  # Pyupgrade
  "TID", # tidy imports
]

ignore = [
  "E402", # module level import not at top of file
  "E501", # line too long - let black worry about that
  "E731", # do not assign a lambda expression, use a def
]
fixable = ["I"]
extend-safe-fixes = [
  "TID252", # absolute imports
]


[tool.ruff.lint.isort]
known-first-party = ["jobqueue_monitor"]
known-third-party = []
